[gd_scene load_steps=12 format=3 uid="uid://cq3v3io0y1kms"]

[ext_resource type="StyleBox" uid="uid://6ey1ulrt3occ" path="res://assets/parts/frame.stylebox" id="1_ko8q4"]
[ext_resource type="Script" path="res://scenes/schematic.gd" id="1_q7w2l"]
[ext_resource type="FontFile" uid="uid://ck2sp0iypcks" path="res://assets/fonts/RobotoMono-Regular.ttf" id="1_q54wc"]
[ext_resource type="PackedScene" uid="uid://1ugdcg3f5q1w" path="res://scenes/IOManager.tscn" id="2_7dp20"]
[ext_resource type="StyleBox" uid="uid://b51cf2x3pfpfk" path="res://assets/parts/selected-frame.stylebox" id="2_xbl4k"]
[ext_resource type="PackedScene" uid="uid://soo142csxxxi" path="res://scenes/MemoryManager.tscn" id="3_3rybu"]
[ext_resource type="PackedScene" uid="uid://c7pcrpp8inqwr" path="res://scenes/TestRunner.tscn" id="3_lacat"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x3r5c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2no1j"]

[sub_resource type="Theme" id="Theme_rntxj"]
default_font = ExtResource("1_q54wc")
GraphNode/constants/port_h_offset = -4
GraphNode/constants/separation = 10
GraphNode/styles/panel = ExtResource("1_ko8q4")
GraphNode/styles/panel_selected = ExtResource("2_xbl4k")
GraphNode/styles/titlebar = SubResource("StyleBoxEmpty_x3r5c")
GraphNode/styles/titlebar_selected = SubResource("StyleBoxEmpty_2no1j")
Label/fonts/font = ExtResource("1_q54wc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydr2j"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="Schematic" type="GraphEdit"]
size_flags_vertical = 3
theme = SubResource("Theme_rntxj")
right_disconnects = true
script = ExtResource("1_q7w2l")

[node name="IOManagerPanel" type="PopupPanel" parent="."]
title = "IO Manager"
borderless = false
theme_override_styles/panel = SubResource("StyleBoxFlat_ydr2j")

[node name="IOManager" parent="IOManagerPanel" instance=ExtResource("2_7dp20")]
offset_right = 700.0
offset_bottom = 520.0

[node name="MemoryManagerPanel" type="PopupPanel" parent="."]
title = "Memory Manager"
borderless = false
theme_override_styles/panel = SubResource("StyleBoxFlat_ydr2j")

[node name="MemoryManager" parent="MemoryManagerPanel" instance=ExtResource("3_3rybu")]
offset_left = 0.0
offset_top = 0.0
offset_right = 412.0
offset_bottom = 100.0

[node name="C" type="CanvasLayer" parent="."]

[node name="TestRunner" parent="C" instance=ExtResource("3_lacat")]
visible = false
offset_top = 0.0
offset_bottom = 369.0

[connection signal="scroll_offset_changed" from="." to="." method="_on_scroll_offset_changed"]
[connection signal="hidden" from="C/TestRunner" to="." method="_on_test_runner_hidden"]
[connection signal="play" from="C/TestRunner" to="." method="_on_test_runner_play"]
[connection signal="reset" from="C/TestRunner" to="." method="_on_test_runner_reset"]
[connection signal="step" from="C/TestRunner" to="." method="_on_test_runner_step"]
[connection signal="stop" from="C/TestRunner" to="." method="_on_test_runner_stop"]
